--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -1,1 +1,6 @@
-<h1>CHECKOUT</h1>
+{% extends 'store/main.html' %}
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+{% block content %}
+    <h1>CHECKOUT</h1>
+{% endblock content %}
