--- a/ecommerce/store/templates/store/cart.html
+++ b/ecommerce/store/templates/store/cart.html
@@ -13,7 +13,7 @@
             <table class="table">
                 <tr>
                     <th><h5>Items: <strong>{{order.get_cart_items}}</strong></h5></th>
-                    <th><h5>Total: <strong>{{order.get_cart_total}}$</strong></h5></th>
+                    <th><h5>Total: <strong>{{order.get_cart_total|floatformat:2}}$</strong></h5></th>
                     <th>
                         <a style="float:right; margin:5px" class="btn btn-success"
                            href="{% url 'checkout' %}">Checkout</a>
@@ -41,11 +41,15 @@
                 <div style="flex:1">
                     <p class="quantity">{{item.quantity}}</p>
                     <div class="quantity">
-                        <img class="chg-quantity" src="{% static 'images/arrow-up.png' %}">
-                        <img class="chg-quantity" src="{% static 'images/arrow-down.png' %}">
+                        <img class="chg-quantity update-cart"
+                             data-product="{{item.product.id}}" data-action="add"
+                             src="{% static 'images/arrow-up.png' %}">
+                        <img class="chg-quantity update-cart"
+                             data-product="{{item.product.id}}" data-action="remove"
+                             src="{% static 'images/arrow-down.png' %}">
                     </div>
                 </div>
-                <div style="flex:1"><p>{{item.get_total}}$</p></div>
+                <div style="flex:1"><p>{{item.get_total|floatformat:2}}$</p></div>
 
             </div>
             {% endfor %}
