--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -65,6 +65,7 @@
 
 <script type="text/javascript">
     var shipping = '{{order.shipping}}'
+    var total = '{{order.get_cart_total|floatformat:2}}'
 
     if (shipping == 'False'){
         document.getElementById('shipping-info').innerHTML = ''
@@ -93,6 +94,44 @@
     })
     function submitFormData(){
         console.log('payment lol')
+
+        var userFormData = {
+            'name':null,
+            'email':null,
+            'total':total,
+        }
+        var shippingInfo = {
+            'address':null,
+            'city':null,
+            'state':null,
+            'zipcode':null
+        }
+        if (shipping != 'False'){
+            shippingInfo.address = form.address.value
+            shippingInfo.city = form.city.value
+            shippingInfo.state = form.state.value
+            shippingInfo.zipcode = form.zipcode.value
+        }
+        if (user == 'AnonymousUser'){
+            userFormData.name = form.name.value
+            userFormData.email = form.email.value
+        }
+        var url = '/process_order/'
+
+        fetch(url,{
+            method:'POST',
+            headers: {
+                'Content-Type': 'application/json',
+                'X-CSRFToken':csrftoken,
+            },
+            body:JSON.stringify({'form':userFormData,'shipping':shippingInfo})
+        })
+            .then((response)=>{return response.json()})
+            .then((data)=>{
+                 console.log('success', data);
+                 alert('completed');
+                 window.location.href = "{% url 'store' %}"
+         })
     }
 </script>
 
