--- a/ecommerce/store/templates/store/main.html
+++ b/ecommerce/store/templates/store/main.html
@@ -27,7 +27,30 @@
 			}
 			return cookieValue;
 		}
-		const csrftoken = getToken('csrftoken');
+		var csrftoken = getToken('csrftoken');
+		console.log('csrftokenzmaina:', csrftoken)
+
+		function getCookie(name) {
+		var cookieArr = document.cookie.split(";");
+
+		for(var i = 0; i < cookieArr.length; i++) {
+			var cookiePair = cookieArr[i].split("=");
+
+			if(name == cookiePair[0].trim()) {
+				return decodeURIComponent(cookiePair[1]);
+			}
+		}
+		return null;
+	}
+	var cart = JSON.parse(getCookie('cart'))
+		console.log('cart:',cart)
+		if(cart == undefined){
+			cart = {}
+			console.log('cart was created')
+			document.cookie = 'cart=' + JSON.stringify(cart) + ';domain=;path=/'
+		}
+
+
 	</script>
 </head>
 <body>
